This is the first time we are getting some sort of data

--- a/game/Makefile
+++ b/game/Makefile
@@ -9,6 +9,9 @@ all: $(SOURCES) $(EXECUTABLE)
 	
 $(EXECUTABLE): $(OBJECTS) 
 	$(CC) $(LDFLAGS) $(OBJECTS) -o $@
+	rm -rf $(OBJECTS)
+	mv $(EXECUTABLE) ../
 
 .cpp.o:
 	$(CC) $(CFLAGS) $< -o $@
+
